--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,12 @@
   font-size: medium;
 }
 
+.facts {
+  padding: 50px 100px;
+  background-color: #2155CD;
+  color: #E8F9FD;
+}
+
 .footer {
   background-color: #0AA1DD;
   color: #E8F9FD;
