got the event block to display when clicking on the table. will have it add table info to details next. The details are on the table though, but I just want to see if I can manipulate the elements via js for practice.

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,10 @@
   padding-bottom: 10px;
 }
 
+.events #eventBlock {
+  display: none;
+}
+
 .events .event-filter {
   padding: 20px 100px 0px 100px;
   background-color: #2155CD;
