--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,13 @@
      object-fit: cover;
   max-width: 100%;
   border-radius: 10%;
-  padding: 10px;
   margin-top: 30px;
+}
+
+@media (max-width: 380px) {
+  .about img {
+    padding: 0px;
+  }
 }
 
 .btn-main {
@@ -57,6 +62,10 @@
   bottom: initial;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
+}
+
+.carousel-caption h1 {
+  padding: 20px;
 }
 
 .carousel-inner img {
@@ -94,7 +103,8 @@
 
 @media (max-width: 992px) {
   .contact {
-    padding: 100px 50px;
+    padding: 100px 20px;
+    font-weight: lighter;
   }
 }
 
@@ -102,14 +112,10 @@
   padding-right: 100px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .contact .contact-form {
-    min-width: 500px;
+    padding-right: 0px;
   }
-}
-
-.contact .contact-info .row {
-  padding: 50px 0px 50px 10px;
 }
 
 .contact .contact-label {
@@ -127,6 +133,22 @@
   font-size: medium;
 }
 
+.contact p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.contact .contact-border {
+  border-right-style: solid;
+  border-width: medium;
+}
+
+@media (max-width: 768px) {
+  .contact .contact-border {
+    border-right-style: none;
+  }
+}
+
 .facts {
   padding: 50px 100px;
   background-color: #2155CD;
@@ -140,6 +162,17 @@
 .facts p {
   font-size: xx-large;
   font-weight: bolder;
+}
+
+.facts .fact-border {
+  border-right-style: solid;
+  border-width: medium;
+}
+
+@media (max-width: 768px) {
+  .facts .fact-border {
+    border-right-style: none;
+  }
 }
 
 .footer {
@@ -210,7 +243,6 @@
 
 .event .table-responsive {
   min-height: 300px;
-  min-width: 300px;
 }
 
 .event .table-striped > tbody > tr:nth-child(odd) > td,
@@ -232,6 +264,12 @@
   padding: 100px 200px;
 }
 
+@media (max-width: 576px) {
+  .owner {
+    padding: 10px 10px;
+  }
+}
+
 .owner .image-container {
   background: rgba(238, 238, 238, 0.7);
   display: block;
@@ -239,6 +277,13 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 30px;
+}
+
+@media (max-width: 576px) {
+  .owner .image-container {
+    padding: 20px;
+    display: block;
+  }
 }
 
 .owner img {
@@ -264,6 +309,8 @@
 
 .employees p {
   padding: 10px 30px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .employees .striped {
@@ -273,12 +320,18 @@
 
 .events {
   padding: 50px 200px;
-  min-width: 500px;
+  min-width: 100%;
 }
 
 @media (max-width: 992px) {
   .events {
     padding: 50px 100px;
+  }
+}
+
+@media (max-width: 768px) {
+  .events {
+    padding: 100px 0px;
   }
 }
 
